                              Release History
===========================================================================

6.0 to 6.x: (MM dd, 2019)

  * Note: because of major event remapping changes, all remappings will be
          reset to defaults; if you had custom mappings, they will need to
          be re-entered again.

  * Updated internal ROM properties database to ROM-Hunter version 15
    (thanks go to RomHunter for his tireless research in this area).
    Related to this, updated the snapshot collection.

  * Added various developer options for oddball TIAs: (TODO: doc)
     - delayed playfield bits
     - delayed playfield color
     - delayed player 0 swap
     - delayed player 1 swap
     - stuffed player move

  * Fullscreen TIA modes no longer assume that desktop taskbars, etc
    are present, hence they are scaled to the proper fullscreen size.

  * Added proper Retron77 port. (TODO: doc)

  * Reworked ROM properties database, making it load faster in certain
    cases.  Related to this, completely removed 'Display_Height' stuff.
    (TODO: doc)

  * Disabled some developer options for 'Player settings'. (TODO: doc)

  * Enhanced command dialog to display current state.

  * Added automatic controller detection. (TODO: Stella.pro cleanup)

  * Removed 'tia.fsfill' option, replacing it with 'tia.fs_stretch'.  This
    new option allows to preserve TIA image aspect ratio in fullscreen
    mode, or stretch to fill the entire screen.

  * Removed superfluous controller option 'PADDLES_IDIR'.

  * Added hotkey for sound on/off.

  * Fixed not working 7800 pause key.

  * Fixed display of negative values in debugger; sometimes they were
    shown as positive.

  * Fixed 'Dancing Plate (Unknown) (PAL)' to use joystick.

  * Allow the DPC+ scheme to not enable 'jitter' effect for certain older
    DPC+ driver versions; this allows 'Epic Adventure' ROM to finally
    work in Stella.

  * PNG image support is now conditionally compiled into Stella.  All