@@ -368,15 +368,12 @@
   <p>
   <h3><b><u>Windows</u></b></h3>
 
-  <p>The Windows version of Stella is designed to work on Windows XP_SP3(*)/Vista/7/8/10
+  <p>The Windows version of Stella is designed to work on Windows Vista/7/8/10
   with the following:</p>
 
   <ul>
     <li>Direct3D or OpenGL capable video card</li>
-    <li>64-bit port has been tested on Windows Vista and above only</li>
-    <li>Visual C++ 2017 Community is required to compile the Stella source code</li>
-    <li>(*) Note: Support for Windows XP is problematic on some systems, and will
-        probably be discontinued in a future release</li>
+    <li>Visual C++ 2017/2019 Community is required to compile the Stella source code</li>
   </ul>
 
   <p>
